# hello_world_from_docker

./: .gitlab-ci.yml  Dockerfile  README.md  hello.py  pyproject.toml  pyvenv.cfg
.github/workflows/: docker-build.yml
.ipynb_checkpoints/: Dockerfile-checkpoint  hello-checkpoint.py
hello_world/: __init__.py
hello_world/tests/: test_hello_world.py
hello_world/tests/.ipynb_checkpoints/: test_hello_world-checkpoint.py
