[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["daryaVOLKK2"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello-world = "hello_world.__main__:main"